[package]
name = "charybdis_macros"
rust-version = "1.75.0"
version = "0.7.9"
edition = "2021"
description = "Proc macro crate for Charybdis ORM"
repository = "https://github.com/nodecosmos/charybdis"
license = "MIT"
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
charybdis_parser = { version = "0.7.9", path = "../charybdis-parser" }
proc-macro2 = "1.0.81"
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0.36"
darling = "0.20.8"

[dev-dependencies]
charybdis = "0.7.2"
scylla = { git = "https://github.com/dracarys18/scylla-rust-driver.git", ref = "47c89d514722dfeae506b5fc2f67e4c4ba7f69e9", features = ["ssl"] }
